syntax = "proto3";

package likechain.likenft.v1;

option go_package = "github.com/likecoin/likecoin-chain/v4/x/likenft/types";

message ClassesByISCN {
  string iscn_id_prefix = 1;
  repeated string class_ids = 2;
}
